<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16dp"
    tools:context=".activity.OTPActivity">

    <LinearLayout
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_otp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enter_otp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_otp_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/otp_description"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_15sp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/etOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:digits="0123456789"
            android:gravity="center_horizontal"
            android:hint="@string/dash"
            android:inputType="number"
            android:letterSpacing="0.4"
            android:maxLength="6"
            android:textColorHint="@color/colorText"
            android:textSize="@dimen/_25sp" />

        <Button
            android:id="@+id/btn_otp_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@drawable/box_primary_corner"
            android:onClick="checkOTP"
            android:text="@string/submit"
            android:textColor="@color/colorWhite" />

        <ImageView
            android:id="@+id/iv_otp_resend"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_marginTop="@dimen/_8dp"
            android:contentDescription="@string/app_name"
            android:onClick="resendOTP"
            android:padding="@dimen/_10dp"
            android:src="@drawable/ic_resend_otp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>